--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,14 @@
 name = "farm-telegram-bot"
 main = "worker.js"
 compatibility_date = "2026-01-16"
-
-
-# Чтобы убрать warning и сделать поведение стабильным:
 preview_urls = false
+
+kv_namespaces = [
+  { binding = "BOOKINGS", id = "52b6e23a84c2419ea98d90dc24e51966" },
+  { binding = "STATE",    id = "875b891729a0419b9cc23f6eb5318ec3" }
+]
+
+[vars]
+ADMIN_USER_ID = "5479360541"
+ADMIN_CHAT_ID = "5479360541"
+
