--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,24 @@ __MACOSX/
 
 # Environment
 .env
+.env.*
+*.local
 
 # Editor / temp files
 *.swp
 *~
+
+# Wrangler (Cloudflare Workers)
+.wrangler/
+.wrangler.toml.bak
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Logs
+*.log
 
